static/style.css
* { box-sizing: border-box; }
body            { font-family: sans-serif; background: #1a1a1a; color: #fff}
a, h1, h2       { color: #fff; underline: none }
a               { text-decoration: none; }
h1, h2          { font-family: 'Georgia', serif; margin: 0; }
h1              { border-bottom: 2px solid #eee; }
h2              { font-size: 1.2em; }
h3              { color: #22a7f0; }
.add-entry input{ margin-bottom: 0.5em }

.page           { margin: 2em auto; width: 75%;
                  padding: 0.8em}
/* grid with ul and li
ul {
  display: flex;
  flex-wrap: wrap;
  list-style-type: none;
  padding-left: 0;
  margin: 0 auto;
  text-align: center;
}

ul li {
  flex: 0 0 calc(50% - 10px);
  margin: 5px;
  padding: 5px 0;
  text-align: center;
  box-sizing: border-box;
  /*border: 1px dashed red;
  background-color: yellow;
  width: 200px;
} */
.container  { width: 100%; margin: 1em 5px 0 5px }
.col      { width: 16.66666667%; text-align: left; position:relative; float:left; }

/* switch to 33.3% width under 1100px screen width, to 50% under 770px, didnt work without
    putting lower check inside higher one*/
@media only screen
  and (max-device-width: 1100px),
  only screen and (max-width: 1100px) {
    .col      { width: 33.3333%; text-align: left; position:relative; float:left; }
    .container { position: relative; min-height: 1px; padding-right: 15px; padding-left: 15px; }
    @media only screen
  and (max-device-width: 770px),
  only screen and (max-width: 770px) {
    .col      { width: 50%; text-align: left; position:relative; float:left; }
}
}

/* 
    display: inline-block;*/
.book-grid-item-container {
    width: 100%;
    padding-top: 145%;
    position: relative;
}
.book-grid-item { margin-right: 8px;
margin-bottom: 6px;
position: absolute;
top: 0;
left: 0;
right: 0;
bottom: 0; }
.book-grid-item-container .book-grid-item img {
    position: absolute;
    width: 100%;
    height: 100%;
}
.book-grid-item-container .book-grid-item .overlay {
    width: 100%;
    position: absolute;
    text-align: center;
    font-weight: bold;
    font-family: 'Open Sans',sans-serif;
    color: #fff;
    height: 100%;
    background: rgba(0,0,0,.5);
    opacity: 0;
    font-size: 24px;
}
.book-grid-item-container:hover .book-grid-item{border:3px solid #22a7f0}
/* on tsumino without >a, since only view info (displayed on hover) is anchor to book */
.book-grid-item-container:hover .book-grid-item>a>.overlay{opacity:1;cursor:pointer}
.book-grid-item-container:hover .book-grid-item>a>.title{opacity:0}
.book-grid-item-container .book-grid-item .overlay .overlay-data {

    width: 100%;
    position: absolute;
    margin-top: 10px;

}
.book-grid-item-container .book-grid-item .overlay .overlay-data .overlay-title {

    text-align: center;
    top: 10px;

}
.book-grid-item-container .book-grid-item .overlay .overlay-data .overlay-sub {

    text-align: center;
    top: 5px;
    font-size: 12px;

}
.book-grid-item-container .book-grid-item .overlay .overlay-data .overlay-rate > span {

    color: #22a7f0;

}
.fa {

    display: inline-block;
    font: normal normal normal 14px/1 FontAwesome;
        font-size: 14px;
    font-size: inherit;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

}
.book-grid-item-container .book-grid-item .title {
    width: 100%;
    position: absolute;
    text-align: center;
    font-weight: bold;
    font-family: 'Open Sans',sans-serif;
    color: #fff;
    font-size: 12px;
    background: rgba(0,0,0,.75);
    bottom: 0;
    height: 30px;
    line-height: 30px;
    border-top: 3px solid #22a7f0;
}
.thumb-title    { text-align: center; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; display: block; }
.entries img    { width: 100% }
.entries li h2  { margin-left: -1em; }
.add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
.add-entry dl   { font-weight: bold; }
.metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
                  margin-bottom: 1em; background: #1a1a1a; }
.flash          { background: #cee5F5; padding: 0.5em;
                  border: 1px solid #aacbe2; }
.error          { background: #f0d6d6; padding: 0.5em; }

